--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
     "js-cookie": "^3.0.5",
