--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
+    "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
